# simple-api-flask

./: .gitignore  anotações.md  app.py  aula.yml  batata.txt  ceps.txt  cronograma.yaml  docker-compose.yaml  normalizar_cep.py  pyproject.toml
app/: func_in_python.py  lição da semana.md  main.py
app/db/: model.py
app/templates/: for.jinja  index.html
